Add created_by to users

--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -32,6 +32,7 @@ pt-BR:
         person: Pessoa
         enterprise: Empresa
         current_enterprise: Empresa logada
+        created_by: Criado por
     models:
       user: Usuário
       user/role: Regra de usuário
