--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -69,6 +69,7 @@ pt-BR:
           admin_master: Admin master
           owner: Proprietário
           viewer: Visualizador
+        created_by: Criado por
         created_at: Criado em
         updated_at: Atualizado em
       client:
