TR-28 - Ajustes gerais (#22)
* Fix layout admin and add created_by to enterprises

* Add created_by to users

* Add created_by to User::Roles

* Fix some things

* Fix services and specs

* Fix service to creates new people

* Fix frontend

* Fix specs

--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -17,6 +17,7 @@ pt-BR:
         identity_document_number: Número do documento de identificação
         identity_document_issuing_agency: Órgão expedidor do documento de identificação
         birth_date: Data de nascimento
+        created_by: Criado por
         created_at: Criado em
         updated_at: Atualizado em
       address:
@@ -68,6 +69,7 @@ pt-BR:
           admin_master: Admin master
           owner: Proprietário
           viewer: Visualizador
+        created_by: Criado por
         created_at: Criado em
         updated_at: Atualizado em
       client:
