--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,3 +4,5 @@
       messages:
         blank: não pode ficar em branco
         taken: já está em uso
+        greater_than_or_equal_to: deve ser depois de %{count}
+        less_than_or_equal_to: deve ser antes de %{count}
